--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "sass": "^1.21.0",
     "semver": "^6.3.0",
     "slugify": "^1.3.4",
-    "stalfos": "github:hankchizljaw/stalfos#c8971d22726326cfc04089b2da4d51eeb1ebb0eb"
+    "stalfos": "github:hankchizljaw/stalfos#c8971d22726326cfc04089b2da4d51eeb1ebb0eb",
+    "tinacms": "^1.5.28"
   },
   "devDependencies": {
     "@erquhart/rollup-plugin-node-builtins": "^2.1.5",
+    "@tinacms/cli": "^1.5.39",
+    "@types/node": "^20.10.6",
     "bl": "^3.0.1",
     "chokidar-cli": "^2.0.0",
     "cross-env": "^5.2.0",
